--- a/helm/charts/tags/templates/serviceaccount.yaml
+++ b/helm/charts/tags/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "taga.serviceAccountName" . }}
+  name: {{ include "tags.serviceAccountName" . }}
   labels:
-    {{- include "taga.labels" . | nindent 4 }}
+    {{- include "tags.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
